# dts-tools

./: .gitignore  dm8_guide.md
dm8_excel_etl/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-jdbc.txt  requirements.txt
dm8_excel_etl/config/: app.samples.yaml  app.yaml  odbc.ini  odbcinst.ini
dm8_excel_etl/drivers/jdbc/: readme.txt
dm8_excel_etl/scripts/: load_samples.sh  make_offline_bundle.sh  one_click_test.sh  prepare_wheels.sh  setup_odbc_runtime.sh
dm8_excel_etl/sql/ads/: 01_refresh_ads.sql
dm8_excel_etl/sql/ddl/: 00_etl_meta.sql  01_ods_tables.sql  02_mdm_tables.sql  03_ads_tables.sql
dm8_excel_etl/sql/mdm/: 01_build_mdm.sql
dm8_excel_etl/src/etl/: cli.py  config.py  db.py  excel.py  loader.py  meta.py  sql_runner.py
dm8_excel_etl/tests/: ads_column_comments.sql  ads_select_cn.sql  build_mdm_and_ads.sql  ddl_and_seed_ods.sql  test_config.py  test_db.py  test_excel.py
docs/erp/: biview.xlsx  ddl_20251217.xlsx  erp_ads.sql  erp_ddl.sql  erp_mdm.sql
docs/erp/samples/: sample_出入库流水_100.csv  sample_现存量_100.csv  sample_采购订单执行查询_100.xlsx  sample_项目预算执行情况查询_100.xlsx
